Updated Gradle -> 4.9; Added Gradle Versions Plugin