@@ -1,5 +1,6 @@
 plugins {
   id "com.github.johnrengelman.shadow" version "2.0.4"
+  id "com.github.ben-manes.versions" version "0.20.0"
 }
 apply plugin: "maven-publish"
 
@@ -43,6 +44,7 @@ group = "com.obsidiandynamics.warthog"
 version = packageVersion
 
 def baseJvmArgs = [
+  "--illegal-access=warn",
   "--add-opens=java.base/java.lang=ALL-UNNAMED",
   "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
   "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
@@ -155,7 +157,7 @@ dependencies {
   compile "org.apache.httpcomponents:httpasyncclient:${httpasyncclientVersion}"
   compile "org.apache.commons:commons-lang3:3.7"
   compile "com.fasterxml.jackson.core:jackson-databind:${jacksonVersion}"
-  compile "com.beust:jcommander:1.71"
+  compile "com.beust:jcommander:1.72"
   compile "org.fusesource.jansi:jansi:1.17.1"
 }
 
